TestCases/valid-graphs/tex/TestCaseForShape.tex
\begin{tikzpicture}
    \draw (0,0) ellipse (5cm and 7cm);
    \draw (0,0) rectangle (10cm, 10cm);
    \draw (0,0) circle (2cm);
    \node (b) [fill=blue] at (5,5) {};
    \node (c) [fill=blue] at (5,10) {};
    \draw (b) -- (c);
\end{tikzpicture}