TestCases/invalid-graphs/tex/NodeMissingFromEdge_1.tex
\begin{tikzpicture}
  	  
    \node (b1)[fill=red!60] at (0,0) {};
    \draw (b1) -- (b2);
 
\end{tikzpicture}
